--- a/tictactoenichtfertig.html
+++ b/tictactoenichtfertig.html
@@ -20,71 +20,77 @@
     <!-- Spielfeld, Buttons-->
       
     <button
-    id="button" 
+    id="button1" 
     class="button"
-  
-    ondblclick="getImageCross()"></button>
+    onclick="checkButton1()"
+    ondblclick="checkButton1dbl()"></button>
 
     <button
     id="button2" 
     class="button"
-    onclick="checkButton()"
-    ondblclick="checkButton1()"></button>
+    onclick="checkButton2()"
+    ondblclick="checkButton2dbl()"></button>
 
     <button 
     id="button3" 
     class="button"
-    onclick="checkButton()"
-    ondblclick="checkButton1()"></button>
+    onclick="checkButton3()"
+    ondblclick="checkButton3dbl()"></button>
 
 </br>
 
     <button
     id="button4" 
     class="button"
-    onclick="checkButton()"
-    ondblclick="checkButton1()"></button>
+    onclick="checkButton4()"
+    ondblclick="checkButton4dbl()"></button>
 
     <button
     id="button5" 
     class="button"
-    onclick="checkButton()"
-    ondblclick="checkButton1()"></button>
+    onclick="checkButton5()"
+    ondblclick="checkButton5dbl()"></button>
 
     <button 
     id="button6" 
     class="button"
-    onclick="checkButton()"
-    ondblclick="checkButton1()"></button>
+    onclick="checkButton6()"
+    ondblclick="checkButton6dbl()"></button>
 
   </br>
 
     <button
     id="button7" 
     class="button"
-    onclick="checkButton()"
-    ondblclick="checkButton1()"></button>
+    onclick="checkButton7()"
+    ondblclick="checkButton7dbl()"></button>
 
     <button
     id="button8" 
     class="button"
-    onclick="checkButton()"
-    ondblclick="checkButton1()"></button>
+    onclick="checkButton8()"
+    ondblclick="checkButton8dbl()"></button>
 
     <button
     id="button9" 
     class="button"
-    onclick="checkButton()"
-    ondblclick="checkButton1()"></button>
+    onclick="checkButton9()"
+    ondblclick="checkButton9dbl()"></button>
+
+
+
+
 
     
 
 
-<!-- Vorgehensweiße für Spielastand aktualisieren und verlinkung aus Taschenrechner.html ziehen-->
+<!-- Vorgehensweiße für Spielastand aktualisieren und verlinkung aus Taschenrechner.html ziehen
+Calculate Plus verwenden
+-->
 <p>
-Spieler 1: <input disabled id="Spielstand" type="number" style="margin-right: 10px;" value="0"> <!-- Spielstand Spieler 1-->
+Spieler 1: <input disabled id="Spieler1" type="number" style="margin-right: 10px;" value="0"> <!-- Spielstand Spieler 1-->
 <br/>
-Spieler 2:  <input disabled id="Spielstand" type="number" style="margin-right: 10px;" value="0"> <!-- Spielstand Spieler 2-->
+Spieler 2:  <input disabled id="Spieler2" type="number" style="margin-right: 10px;" value="0"> <!-- Spielstand Spieler 2-->
 </p>
 
 </br> <a href="cancel.png"> <img src= "cancel.png" alt="cancel" width='50' /> </a>
@@ -92,57 +98,184 @@ Spieler 2:  <input disabled id="Spielstand" type="number" style="margin-right: 1
 
 
 
-<script>
 
+
+
+
+
+
+<script>
 
 //Test background Button ändern
 
 let imageCircle = ["circle.png"];
 let imageCircleBG = ["url(circle.png)"];
 let imageCross = ["cancel.png"];
-let imageCrossBg = ["url(cancel.png)"];
+let imageCrossBG = ["url(cancel.png)"];
 
-function checkButton(){
-//if (id="button1") {
-  //document.getElementById("button1").style.background = imageCircleBG
-//}
-if (id="button2") {
-  document.getElementById("button2").style.background = imageCircleBG
-}
-else if (id="button3") {
-  document.getElementById("button3").style.background = imageCircleBG
-}
-else if (id="button4") {
-  document.getElementById("button4").style.background = imageCircleBG
-}
-else if (id="button5") {
-  document.getElementById("button5").style.background = imageCircleBG
-}
-else if (id="button6") {
-  document.getElementById("button6").style.background = imageCircleBG
-}
-else if (id="button7") {
-  document.getElementById("button7").style.background = imageCircleBG
-}
-else if (id="button8") {
-  document.getElementById("button8").style.background = imageCircleBG
-}
-else if (id="button9") {
-  document.getElementById("button9").style.background = imageCircleBG
-}
-}
+
+// Button 1
 
 function checkButton1(){
+document.getElementById("button1").style.background = imageCircleBG
+checkWinnerPlayer1()
+}
+
+function checkButton1dbl(){
   document.getElementById("button1").style.background = imageCrossBG
+  
+}
+
+// Button 2
+
+function checkButton2(){
+document.getElementById("button2").style.background = imageCircleBG
+checkWinnerPlayer1()
+}
+
+function checkButton2dbl(){
+  document.getElementById("button2").style.background = imageCrossBG
 }
 
 
-function getImageCircle(){
-  document.getElementById("button1").style.background = imageCircleBG
+// Button 3
+
+function checkButton3(){
+document.getElementById("button3").style.background = imageCircleBG
+checkWinnerPlayer1()
 }
 
-function getImageCross(){
-  document.getElementById("button").style.background = imageCrossBG
+function checkButton3dbl(){
+  document.getElementById("button3").style.background = imageCrossBG
+}
+
+// Button 4
+
+function checkButton4(){
+document.getElementById("button4").style.background = imageCircleBG
+checkWinnerPlayer1()
+}
+
+function checkButton4dbl(){
+  document.getElementById("button4").style.background = imageCrossBG
+}
+
+// Button 5
+
+function checkButton5(){
+document.getElementById("button5").style.background = imageCircleBG
+checkWinnerPlayer1()
+}
+
+function checkButton5dbl(){
+  document.getElementById("button5").style.background = imageCrossBG
+}
+
+// Button 6
+
+function checkButton6(){
+document.getElementById("button6").style.background = imageCircleBG
+checkWinnerPlayer1()
+}
+
+function checkButton6dbl(){
+  document.getElementById("button6").style.background = imageCrossBG
+}
+
+
+// Button 7
+
+function checkButton7(){
+document.getElementById("button7").style.background = imageCircleBG
+checkWinnerPlayer1()
+}
+
+function checkButton7dbl(){
+  document.getElementById("button7").style.background = imageCrossBG
+}
+
+// Button 8
+
+function checkButton8(){
+document.getElementById("button8").style.background = imageCircleBG
+}
+
+function checkButton8dbl(){
+  document.getElementById("button8").style.background = imageCrossBG
+}
+
+
+// Button 9
+
+function checkButton9(){
+document.getElementById("button9").style.background = imageCircleBG
+}
+
+function checkButton9dbl(){
+  document.getElementById("button9").style.background = imageCrossBG
+}
+
+/*
+
+FUNKTION DIE ICH NOCH ZUM LAUFEN BRINGEN MUSS
+
+function checkButton(){
+if (id="button1") {
+document.getElementById("button1").style.background = imageCircleBG
+return button1
+}
+else if (id="button2") {
+  document.getElementById("button2").style.background = imageCircleBG;
+  return button2
+}
+else if (id="button3") {
+  document.getElementById("button3").style.background = imageCircleBG;
+}
+else if (id="button4") {
+  document.getElementById("button4").style.background = imageCircleBG;
+}
+else if (id="button5") {
+  document.getElementById("button5").style.background = imageCircleBG;
+}
+else if (id="button6") {
+  document.getElementById("button6").style.background = imageCircleBG;
+}
+else if (id="button7") {
+  document.getElementById("button7").style.background = imageCircleBG;
+}
+else if (id="button8") {
+  document.getElementById("button8").style.background = imageCircleBG;
+}
+else if (id="button9") {
+  document.getElementById("button9").style.background = imageCircleBG;
+}
+}
+
+
+
+
+
+
+
+
+*/
+
+//CHECKEN WER GEWINNT
+
+Spieler1Winner = checkWinner[checkWinnerPlayer1()]
+
+
+
+function checkWinnerPlayer1(){
+
+if (document.getElementById("button1").style.background && document.getElementById("button2").style.background && document.getElementById("button3").style.background){
+console.log("Spieler 1 hat gewonnen wegen Reihe 1 ")
+
+}else if (document.getElementById("button4").style.background && document.getElementById("button5").style.background && document.getElementById("button6").style.background){
+console.log("Spieler 1 hat gewonnenwegen Reihe 2")
+} //else if (document.getElementById("button4").style.background.url("circle.png)")){
+  //console.log("yoa passt")
+//}
 }
 
 
