--- a/tic-tac-toe/tictactoeneu.html
+++ b/tic-tac-toe/tictactoeneu.html
@@ -6,19 +6,24 @@
     <meta name ="viewport">
     <meta name="viewport" content="width=device-width, initial-scale=0.7"/>
     <base href="images/">
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 <link href="../tictactoeneu.css" type="text/css" rel="stylesheet"/> <!-- stylesheet öffnen mit den fonts-->
 
 <title>Tic Tac Toe</title>
 </head>
 <body>
 
+
     <div class="viereckHintergrund">
       <h1 class="ticTacToeUeberschrift"><span class="letterSpacingPoint">.</span><span>T</span>ic <span>T</span>ac <span>T</span>oe<span>.</span></h1>
 
-<div class="werIstDrann">Spieler .. ist drann</div>
-<div class="buttonReset">Reset</div>
+<div class="werIstDran">Spieler .. ist dran</div>
+<div class="button" id="generate"onclick="generateSpielfeld() ;this.onclick=null ">Spielfeld Generieren</div> <!-- durch:    this.onclick=null;    lässt sich der BUtton nur ein mak drücken-->
 
-<div class="spielfeld">
+ 
+<div class="button">Reset</div>
+
+<div id="spielfeld" class="spielfeld">
 <div class="gitter"></div>
 <div class="gitter"></div>
 <div class="gitter"></div>
@@ -30,17 +35,23 @@
 <div class="gitter"></div>
 </div>
 
-<div class="zentrieren">
+
+<div id="demo"></div>
+
+<div>
 <p>
  Spieler 1 <input disabled id="ergebnisEins" type="number" value="0"></p>
  Spieler 2 <input disabled id="ergebnisZwei" type="number"  value="0">
 </div>
+<br>
+
+Spielfeldgröße<input id="input" type="number" style="margin-right: 10px;" value="3" min="3" max="100">
+
+
 
 <!-- Wie Spielfeld noch so dynamisch umgestalten dass wenn ich mein Spielfeld vergrößer, das an dem selben Punkt bleibt!! und beides auf einer Ebene ist-->
 
-<div src=tictactoescript.js></div>
 </div>
-
-
-<script src="tictactoescript.js"></script>
+<script src="../tictactoescript.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </body>
