--- a/tic-tac-toe/tictactoeneu.html
+++ b/tic-tac-toe/tictactoeneu.html
@@ -18,9 +18,9 @@
       <h1 class="ticTacToeUeberschrift"><span class="letterSpacingPoint">.</span><span>T</span>ic <span>T</span>ac <span>T</span>oe<span>.</span></h1>
 
 <div class="werIstDran">Spieler .. ist dran</div>
-<div class="button" id="generate"onclick="generateSpielfeld() ;this.onclick=null ">Spielfeld Generieren</div> <!-- durch:    this.onclick=null;    lässt sich der BUtton nur ein mak drücken-->
+<div class="button" id="generate" onclick="generateSpielfeld() ;this.onclick=null ">Spielfeld Generieren</div> <!-- durch:    this.onclick=null;    lässt sich der BUtton nur ein mak drücken-->
 
- 
+<div class="button" id="start" onclick="changePlayer()">Start</div>
 <div class="button">Reset</div>
 
 <div id="spielfeld" class="spielfeld">
