--- a/tic-tac-toe/tictactoeneu.html
+++ b/tic-tac-toe/tictactoeneu.html
@@ -14,8 +14,8 @@
 <body>
 
 
-    <div class="viereckHintergrund">
-      <h1 class="ticTacToeUeberschrift"><span class="letterSpacingPoint">.</span><span>T</span>ic <span>T</span>ac <span>T</span>oe<span>.</span></h1>
+<div class="gameHintergrund">
+<h1 class="ticTacToeUeberschrift"><span class="letterSpacingPoint">.</span><span>T</span>ic <span>T</span>ac <span>T</span>oe<span>.</span></h1>
 
 <div class="werIstDran">Spieler .. ist dran</div>
 <div class="button" id="generate" onclick="generateSpielfeld() ;this.onclick=null ">Spielfeld Generieren</div> <!-- durch:    this.onclick=null;    lässt sich der BUtton nur ein mak drücken-->
