checkWinner 02.02 und 03.02 morgens

--- a/tic-tac-toe/tictactoeneu.html
+++ b/tic-tac-toe/tictactoeneu.html
@@ -24,17 +24,18 @@
 <div class="button" id="btnReset">Reset</div>
 
 <div id="spielfeld" class="spielfeld">
-<div class="gitter" id="Zeile0Spalte0"></div>
-<div class="gitter" id="Zeile1Spalte0"></div>
-<div class="gitter" id="Zeile2Spalte0"></div>
-<div class="gitter" id="Zeile0Spalte1"></div>
-<div class="gitter" id="Zeile1Spalte1"></div>
-<div class="gitter" id="Zeile2Spalte1"></div>
-<div class="gitter" id="Zeile0Spalte2"></div>
-<div class="gitter" id="Zeile1Spalte2"></div>
-<div class="gitter" id="Zeile2Spalte2"></div>
+<div class="gitter" id="0_0"></div>
+<div class="gitter" id="1_0"></div>
+<div class="gitter" id="2_0"></div>
+<div class="gitter" id="0_1"></div>
+<div class="gitter" id="1_1"></div>
+<div class="gitter" id="2_1"></div>
+<div class="gitter" id="0_2"></div>
+<div class="gitter" id="1_2"></div>
+<div class="gitter" id="2_2"></div>
 </div>
 
+<p id="demo1"></p>
 
 <div id="demo"></div>
 <input id="inputEins" type="text" value="Spieler 1">
