gewinnermittlung und countdown

--- a/tic-tac-toe/tictactoeneu.html
+++ b/tic-tac-toe/tictactoeneu.html
@@ -35,13 +35,15 @@
 <div class="gitter" id="2_2"></div>
 </div>
 
-<p id="demo1"></p>
+<div class="space">
+<p class="werHatGewonnen"></p>
+<p class="countdown "id="countdown"></p>
+</div>
 
-<div id="demo"></div>
+<div id="demo">
 <input id="inputEins" type="text" value="Spieler 1">
-<br>
 <input id="inputZwei" type="text" value="Spieler 2"> 
-
+</div>
 <div>
 <p>
 
