--- a/tic-tac-toe/tictactoeneu.html
+++ b/tic-tac-toe/tictactoeneu.html
@@ -36,23 +36,22 @@
 </div>
 
 <div class="space">
-<p class="werHatGewonnen"></p>
+<p class="werHatGewonnen"></p> 
 <p class="countdown "id="countdown"></p>
 </div>
 
 <div id="demo">
-<input id="inputEins" type="text" value="Spieler 1">
-<input id="inputZwei" type="text" value="Spieler 2"> 
-</div>
-<div>
-<p>
-
-Spieler 1<input disabled id="ergebnisEins" type="number" value="0"></p>
-Spieler 2 <input disabled id="ergebnisEins" type="number" value="0">
-
+<div ><img src= "cancel.png" alt="cancel.png" id="inputSymbol"/><input id="inputEins" type="text" value="Spieler 1"></div>
+<div id="counterErgebnisEins"></div>
 </div>
 <br>
+<div id="demo">
+<div><img src= "circle.png" alt="circle.png" id="inputSymbol"/><input id="inputZwei" type="text" value="Spieler 2"></div>
+<div id="counterErgebnisZwei"></div>
+</div>
 
+<br>
+<br>
 Spielfeldgröße<input id="input" type="number" style="margin-right: 10px;" value="3" min="3" max="100">
 
 
