--- a/tic-tac-toe/tictactoeneu.html
+++ b/tic-tac-toe/tictactoeneu.html
@@ -52,9 +52,11 @@
 
 <br>
 <br>
-Spielfeldgröße<input id="input" type="number" style="margin-right: 10px;" value="3" min="3" max="100">
-
-
+<div class="zentrieren">
+<input id="inputSpielfeldGroesse" type="number" style="margin-right: 10px;" value="3" min="3" max="100">
+<br>
+Spielfeldgröße
+</div>
 
 <!-- Wie Spielfeld noch so dynamisch umgestalten dass wenn ich mein Spielfeld vergrößer, das an dem selben Punkt bleibt!! und beides auf einer Ebene ist-->
 
